<resources>
    <string name="app_name">GameCompositionOfTheNumber</string>
    <string name="welcome_windoow_img_description">Welcome windoow img</string>
    <string name="GameName">Состав числа</string>
    <string name="descriptionWorkGame">Описание правил игры и инструкция по использованию xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="title_choose_level">Выберите уровень игры:</string>
    <string name="bn_test_level">Тестовый уровень</string>
    <string name="bt_level_easy">Легкий уровень</string>
    <string name="bt_level_normal">Средний уровень</string>
    <string name="bt_level_hard">Тяжелый уровень</string>
    <string name="timer_text">00:00</string>
    <string name="questions_sum">1</string>
    <string name="left_number">7</string>
    <string name="qustion_char">\?</string>
    <string name="progress_answer">Правильных ответов %d ( минимум %d)</string>
    <string name="requiredAnswer">Необходимое количество правильных ответов: %d</string>
    <string name="scoreAnswer">Ваш счет: %d</string>
    <string name="requiered_percent">Необходимый процент правильных ответов: %d</string>
    <string name="score_perce">Процент правильных ответов: %d</string>
</resources>