<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="80dp"
        android:src="@drawable/final_ic"
       />




    <TextView
        android:id="@+id/tv_requiered_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/requiredAnswer"
        android:textSize="20sp"
        android:textStyle="normal"

/>

    <TextView
        android:id="@+id/tv_score_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/scoreAnswer"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/tv_requiered_answer"
        app:layout_constraintEnd_toEndOf="@id/tv_requiered_answer"
        app:layout_constraintStart_toStartOf="@id/tv_requiered_answer"
      app:layout_constraintBottom_toTopOf="@id/tv_requiered_percentage"
        app:layout_constraintVertical_chainStyle="packed"
     />

    <TextView
        android:id="@+id/tv_requiered_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/requiered_percent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answer"
        app:layout_constraintEnd_toEndOf="@id/tv_requiered_answer"
        app:layout_constraintStart_toStartOf="@id/tv_requiered_answer"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage" />


    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/score_perce"
        android:textSize="20sp"
        android:textStyle="normal"
       />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Попробовать снова"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"

      />
</LinearLayout>