<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="viewModel"
        type="com.annalech.gamecompositionofthenumber.presentation.GameViewModel" />
</data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text = "@{viewModel.formattedTime}"
        tools:text="@string/timer_text"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_qustion_sum"
        style="@style/OptionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_margin="10dp"
        android:background="@drawable/oval"

        tools:text="1"
        app:numberAsText="@{viewModel.question.sum}"

        app:layout_constraintBottom_toTopOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tv_left_number"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#673AB7"
        tools:text="@string/left_number"
        app:numberAsText="@{viewModel.question.visibibleNumber}"
        app:layout_constraintBottom_toTopOf="@+id/tb_option_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_qustion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_qustion_sum" />

    <TextView
        android:id="@+id/tv_qustion"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#2196F3"
        android:text="@string/qustion_char"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_left_number"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number" />

    <TextView
        android:id="@+id/tb_option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#009688"
         style="@style/QuestionTextStyle"
        tools:text="1"
        android:text="@{viewModel.question.options.get(0).toString()}"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toTopOf="@+id/tb_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tb_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tb_option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        style="@style/QuestionTextStyle"
        tools:text="2"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        android:text="@{viewModel.question.options.get(1).toString()}"



        app:layout_constraintBottom_toTopOf="@+id/tb_option_4"
        app:layout_constraintEnd_toStartOf="@id/tb_option_6"
        app:layout_constraintStart_toEndOf="@+id/tb_option_1" />

    <TextView
        android:id="@+id/tb_option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9B00D4"
    style="@style/QuestionTextStyle"
        tools:text="3"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        android:text="@{viewModel.question.options.get(2).toString()}"
        app:layout_constraintBottom_toTopOf="@+id/tb_option_4"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/tb_option_5" />


    <TextView
        android:id="@+id/tb_option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        style="@style/QuestionTextStyle"
        tools:text="4"
        android:text="@{viewModel.question.options.get(3).toString()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintEnd_toStartOf="@+id/tb_option_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tb_option_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#009688"
      style="@style/QuestionTextStyle"
        tools:text="5"
        android:text="@{viewModel.question.options.get(4).toString()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintEnd_toStartOf="@+id/tb_option_6"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tb_option_4" />


    <TextView
        android:id="@+id/tb_option_6"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:background="#3F51B5"
        tools:text="6"
        android:text="@{viewModel.question.options.get(5).toString()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:onOptionCliickListner="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tb_option_5" />

    <TextView
        android:id="@+id/tv_progress_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{viewModel.progressAnswer}"
app:enoughCount="@{viewModel.enoughContOfRightAnswer}"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"

        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
android:max="100"
        app:enoughPercent="@{viewModel.enoughPerrcentOfRightAnswer}"
        android:progress="@{viewModel.percentRightAnswer}"
        android:secondaryProgress="@{viewModel.minPercent}"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tb_option_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_progress_answer" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>